# skillbox-search-engineV2

./: CMakeLists.txt  README.md  config.json  requests.json
app/: CMakeLists.txt  main.cpp
resources/: file001.txt  file002.txt  file003.txt
src/: CMakeLists.txt
src/include /searchlib/: InvertedIndex.hpp  SearchServer.hpp
src/include/searchlib/: ConverterJSON.hpp
src/lib/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp
test/: tests.cpp
tests/: CMakeLists.txt
